balenciaga style change

--- a/3. BALENCIAGA/index.html
+++ b/3. BALENCIAGA/index.html
@@ -281,8 +281,8 @@
             <div class="footer__custom_service flex">
                     <div class="footer__news">
                         <h2 class="footer__h2_margin">뉴스레터 구독</h2>
-                        <input type="search" name="searchBox" id="searchBox" placeholder="이메일을 입력해주세요..">
-                        <button>신청하기</button>
+                        <input type="search" name="searchBox" id="searchBox" placeholder=" 이메일을 입력해주세요..">
+                        <button>신청</button>
                     </div>
                     <div class="footer__icon">
                         <h2 class="footer__h2_margin">SNS</h2>
