balenciaga tablet version edit

--- a/1. Daegu-marathon/index.html
+++ b/1. Daegu-marathon/index.html
@@ -89,7 +89,7 @@
             </h2>
         </div>
     </section>
-    <section class="apply flex" id="apply">
+    <section class="apply flex main-inner" id="apply">
         <div class="apply__box">
             <img src="./img/apply_img_1.jpg" alt="참가신청안내바로가기" class="apply__img">
             <div class="apply__desc">
