--- a/3. BALENCIAGA/index.html
+++ b/3. BALENCIAGA/index.html
@@ -96,10 +96,18 @@
     <h1>BALENCIAGA COMMUNITY</h1>
     <div class="community__box flex-center">
         <div class="community__gallery">
-            <img src="./img/community-img-1.jpg" alt="communityPhoto1">
-            <img src="./img/community-img-2.jpg" alt="communityPhoto2">
-            <img src="./img/community-img-3.jpg" alt="communityPhoto3">
-            <img src="./img/community-img-4.jpg" alt="communityPhoto4">
+            <a href="#">
+                <img src="./img/community-img-1.jpg" alt="communityPhoto1">
+            </a>
+            <a href="#">
+                <img src="./img/community-img-2.jpg" alt="communityPhoto2">
+            </a>
+            <a href="#">
+                <img src="./img/community-img-3.jpg" alt="communityPhoto3">
+            </a>
+            <a href="#">
+                <img src="./img/community-img-4.jpg" alt="communityPhoto4">
+            </a>
         </div>
         <div class="community__desc flex">
             <a href="#">
@@ -257,6 +265,10 @@
 </section>
 <!-- footer -->
 <footer class="footer" id="footer">
+    <div class="mobile_logo_img_white">
+        <img src="./img/main-logo-white.png" alt="main-logo" class="mobile_logo_img_white">
+        <h2>서울 강남구 도산대로 460 (청담동, 청담건물) 5층</h2>
+    </div>
     <ul class="footer__content footer-inner flex-center">
         <li>
             <img src="./img/main-logo-white.png" alt="main-logo" class="main-logo-white">
