--- a/1. Daegu-marathon/pages/course.html
+++ b/1. Daegu-marathon/pages/course.html
@@ -19,11 +19,8 @@
 <title>코스안내</title>
 </head>
 <body>
-
-    <h1>코스안내 페이지입니다</h1>
-
     <!-- ======================= header ======================= -->
-    <header class="header fixed" id="header">
+    <header class="header fixed header__bg_color" id="header">
         <div class="header-inner flex">
             <a href="../index.html">
                 <img src="../img/logo_white.png" alt="logo-img">
@@ -73,6 +70,10 @@
         </div>
     </header>
 
+    <!-- ========================= main title ========================= -->
+    <section class="course__title main-inner" id="course__title">
+        <h1 class="main-title main-title-mt">코스안내 페이지입니다</h1>
+    </section>
     <!-- ========================= course button section ========================= -->
     <section class="course__nav">
         <a href="#"></a>
