--- a/1. Daegu-marathon/pages/guid.html
+++ b/1. Daegu-marathon/pages/guid.html
@@ -19,11 +19,8 @@
 <title>대회안내</title>
 </head>
 <body>
-
-    <h1>대회안내 페이지입니다</h1>
-
     <!-- ======================= header ======================= -->
-    <header class="header fixed" id="header">
+    <header class="header fixed header__bg_color" id="header">
         <div class="header-inner flex">
             <a href="../index.html">
                 <img src="../img/logo_white.png" alt="logo-img">
@@ -73,8 +70,8 @@
         </div>
     </header>
     <!-- ========================= greeting section ========================= -->
-    <section class="greeting" id="greeting">
-
+    <section class="greeting__title main-inner" id="greeting__title">
+        <h1 class="main-title main-title-mt">대회안내 페이지입니다</h1>
     </section>
     <!-- ========================= support section ========================= -->
     <section class="support" id="support">
