--- a/1. Daegu-marathon/pages/record.html
+++ b/1. Daegu-marathon/pages/record.html
@@ -19,11 +19,8 @@
 <title>기록조회</title>
 </head>
 <body>
-
-    <h1>기록조회 페이지입니다</h1>
-
     <!-- ======================= header ======================= -->
-    <header class="header fixed" id="header">
+    <header class="header fixed header__bg_color" id="header">
         <div class="header-inner flex">
             <a href="../index.html">
                 <img src="../img/logo_white.png" alt="logo-img">
@@ -73,7 +70,13 @@
         </div>
     </header>
 
-    <!-- ========================= record ========================= -->
+    <!-- ========================= main title ========================= -->
+    <section class="record__title main-inner" id="record__title">
+        <h1 class="main-title main-title-mt">기록조회 페이지입니다</h1>
+
+    </section>
+    <!-- ========================= record form ========================= -->
+
     <section class="record">
         <fieldset>
             <legend>입사지원 정보</legend>
