--- a/1. Daegu-marathon/index.html
+++ b/1. Daegu-marathon/index.html
@@ -124,7 +124,7 @@
     <!-- ========================= map section ========================= -->
     <section class="map main-inner">
         <h2 class="main-title">코스안내</h2>
-        <img src="./img/marathon_masters_health.jpg" alt="건강달리기코스안내">
+        <img src="./img/marathon_masters_health.jpg" alt="건강달리기코스안내" class="section__margin">
     </section>
     <!-- ========================= footer ========================= -->
     <footer class="footer" id="footer">
