--- a/3. BALENCIAGA/index.html
+++ b/3. BALENCIAGA/index.html
@@ -93,7 +93,7 @@
 </section>
 <!-- section.community -->
 <section class="community" id="community">
-    <h1>BALENCIAGA COMMUNITY</h1>
+    <h1 class="main_title_style">BALENCIAGA COMMUNITY</h1>
     <div class="community__box flex-center">
         <div class="community__gallery">
             <a href="#">
@@ -143,6 +143,7 @@
 </section>
 <!-- section.category -->
 <section class="category main-inner" id="category">
+    <h1 class="main_title_style">카테고리 살펴보기</h1>
     <ul class="flex-center">
         <a href="#">
             <li>
@@ -169,6 +170,7 @@
 </section>
 <!-- section.recommend -->
 <section class="recommend main-inner" id="recommend">
+    <h1 class="main_title_style">발렌시아가 추천 제품</h1>
     <ul class="flex">
         <li class="li-box-style">
             <div>
@@ -226,6 +228,7 @@
 </section>
 <!-- section.online-service -->
 <section class="online-service footer-inner">
+    <h1 class="main_title_style">온라인 부티크 서비스</h1>
     <ul class="flex-center">
         <li class="li-box-style">
             <i class="uil uil-dropbox"></i>
