--- a/2. SNUH/index.html
+++ b/2. SNUH/index.html
@@ -19,25 +19,22 @@
 <body>
     <div class="wrap">
         <!-- 헤더 -->
-        <header>
-            <div class="header_top">
-                <div class="header_logo">
+        <header class="header_top inner">
+            <div class="flex-center">
+                <div class="header__logo">
                     <img src="./images/snuh-logo.png" alt="main-logo">
                 </div>
-                <ul class="header_login">
-                    <li class="header_login_item">
+                <ul class="header__login flex">
+                    <li class="header__login_item">
                         <a href="#">원격</a>
                     </li>
-                    <li class="header_login_item">
+                    <li class="header__login_item">
                         <a href="#">로그인</a>
                     </li>
-                    <li class="header_login_item">
+                    <li class="header__login_item">
                         <a href="#">회원가입</a>
                     </li>
                 </ul>
-            </div>
-            <div class="header_bottom">
-    
             </div>
         </header>
     </div>
