adding content beommul project

--- a/beommul_cathedral/index.html
+++ b/beommul_cathedral/index.html
@@ -5,20 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<!-- CSS -->
-<link rel="stylesheet" href="./css/style.css">
-<!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> -->
-<!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"> -->
-<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-<!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet"> -->
-<!-- icons -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-<!-- jQuery가 js 제일 상단에 위치 -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<!-- JS -->
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<!-- 우리가 작성하는 js는 제일 아래 -->
+<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<!-- icons : unicons, xeicon -->
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+<!-- js -->
+<!-- jQuery CDN -->
 <script src="./js/script.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 <title>Beommul Cathedral</title>
 </head>
@@ -27,19 +26,20 @@
     <header class="header fixed" id="header">
         <div class="header-inner">
             <a href="./index.html">
-                <img src="./img/logo_white.png" alt="logo-img">
+                <!-- <img src="./img/logo_white.png" alt="logo-img"> -->
             </a>
             <div class="nav__container" id="nav__container">
-                <ul>
+                <ul class="flex">
                     <li><a href="#">대구범물성당</a></li>
                     <li><a href="#">공동체</a></li>
                     <li><a href="#">성당업무</a></li>
+                    <li><a href="#">미사안내</a></li>
                     <li><a href="#">참여마당</a></li>
                     <li><a href="#">신앙생활</a></li>
                 </ul>
             </div>
             <div class="nav__submenu">
-                <div class="nav__submenu_container">
+                <div class="nav__submenu_container flex">
                     <ul class="nav__subitem">
                         <li><a href="#">대주교님 사목지침</a></li>
                         <li><a href="#">본당 사목지침</a></li>
@@ -86,6 +86,92 @@
             </div>
         </div>
     </header>
+<section class="banner__main" id="banner__main">
+    <i class="uil uil-angle-left"></i>
+    <i class="uil uil-angle-right"></i>
+    <div class="main__banner">
+        <div>
+            <img src="./img/main-banner1.jpg" alt="">
+        </div>
+        <div>
+            <img src="./img/main-banner2.jpg" alt="">
+        </div>
+        <div>
+            <img src="./img/main-banner3.jpg" alt="">
+        </div>
+    </div>
+</section>
+<main class="wrap">
+    <section class="information section__margin" id="information">
+        <div class="information__tab ">
+            <div class="tab__menu">
+                <a href="#" class="flex flex-center selected">성당 공지</a>
+                <a href="#" class="flex flex-center">본당 주보</a>
+                <a href="#" class="flex flex-center">미사시간</a>
+            </div>
+            <div class="tab__content">
+                <div class="tab__desc">
+                    <h1>tab1</h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                    </p>
+                </div>
+                <div class="tab__desc">
+                    <h1>tab2</h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                    </p>
+                </div>
+                <div class="tab__desc">
+                    <h1>tab3</h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In aperiam, alias fuga minus pariatur itaque, similique molestias dicta numquam dolores optio velit repudiandae ducimus sed ab praesentium nobis debitis obcaecati.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="information__icon flex" id="information__icon">
+        <div class="icon__item">
+            <a href="#"><img src="./img/icon-bible.png" alt="본당주보보기">
+            <h3>본당주보보기</h3>
+            </a>
+        </div>
+        <div class="icon__item">
+            <a href="#"><img src="./img/icon-church.png" alt="본당갤러리">
+            <h3>본당갤러리</h3>
+            </a>
+        </div>
+        <div class="icon__item">
+            <a href="#"><img src="./img/icon-nun.png" alt="공지사항">
+            <h3>공지사항</h3>
+            </a>
+        </div>
+        <div class="icon__item">
+            <a href="#"><img src="./img/icon-christian-cross.png" alt="미사와 성사안내" class="cross-icon">
+            <h3>미사와 성사안내</h3>
+            </a>
+        </div>
+        <div class="icon__item">
+            <a href="#"><img src="./img/icon-candle.png" alt="예비신자안내">
+            <h3>예비신자안내</h3>
+            </a>
+        </div>
+        <div class="icon__item">
+            <a href="#"><img src="./img/icon-necklace.png" alt="오시는 길">
+            <h3>오시는 길</h3>
+            </a>
+        </div>
 
+    </section>
+
+</main>
 </body>
 </html>
